--- a/LocationReminder/app/src/main/res/values/strings.xml
+++ b/LocationReminder/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="my_location">My Location</string>
     <string name="location_permission">Location Permission</string>
     <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
+    <string name="reminder_details">Reminder Details</string>
 
 </resources>
